CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (tsnet_test)

INCLUDE_DIRECTORIES (..)

LINK_DIRECTORIES (..)
LINK_LIBRARIES (tsnet)

#ADD_COMPILE_OPTIONS (-Wall -O --std=c99)
ADD_COMPILE_OPTIONS (-Wall -g --std=c99)

ADD_DEFINITIONS (-D_DEFAULT_SOURCE)

SET (SRCS echo_server_test.c)

ADD_EXECUTABLE (echo_server_test ${SRCS})
